--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
   <string name="input_hint">FB</string>
   <string name="input_prefill"></string>
   <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+  <string name="empty_list_message">No stock added in your list</string>
+  <string name="pref_stock_status_key">stock_status</string>
+  <string name="no_internet_connection">Your device is not connected to internet</string>
+  <string name="snackbar_action">Try Again</string>
+  <string name="updating_stocks">Updating Stocks</string>
+  <string name="server_down">Server is down please try after some time</string>
+  <string name="invalid_request">Invalid Request , Please try again</string>
+  <string name="pref_stock_initial_request">init_request</string>
+  <string name="action_change_percentage">Change in percentage</string>
 </resources>
