--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <resources>
-  <string name="app_name">Stock Hawk</string>
+  <string name="app_name" translatable="false">Stock Hawk</string>
 
-  <string name="action_example">Example action</string>
+  <string name="action_example" translatable="false">Example action</string>
 
-  <string name="action_settings">Settings</string>
-  <string name="action_change_units">Change Units</string>
-  <string name="symbol_search">Symbol Search</string>
-  <string name="content_test">Search for a Stock Symbol</string>
-  <string name="input_hint">FB</string>
-  <string name="input_prefill"></string>
-  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+  <string name="action_settings" translatable="false">Settings</string>
+  <string name="action_change_units" translatable="false">Change Units</string>
+  <string name="symbol_search" translatable="false">Symbol Search</string>
+  <string name="content_test" translatable="false">Search for a Stock Symbol</string>
+  <string name="input_hint" translatable="false">FB</string>
+  <string name="input_prefill"  translatable="false"></string>
+  <string name="network_toast" translatable="false">Uh-oh! This app requires an internet connection</string>
   <string name="empty_list_message" translatable="false">No stock added in your list</string>
-  <string name="pref_stock_status_key">stock_status</string>
-  <string name="no_internet_connection">Your device is not connected to internet</string>
-  <string name="snackbar_action">Try Again</string>
-  <string name="updating_stocks">Updating Stocks</string>
-  <string name="server_down">Server is down please try after some time</string>
-  <string name="invalid_request">Invalid Request , Please try again</string>
+  <string name="pref_stock_status_key" translatable="false">stock_status</string>
+  <string name="no_internet_connection" translatable="false">Your device is not connected to internet</string>
+  <string name="snackbar_action" translatable="false">Try Again</string>
+  <string name="updating_stocks" translatable="false">Updating Stocks</string>
+  <string name="server_down" translatable="false">Server is down please try after some time</string>
+  <string name="invalid_request" translatable="false">Invalid Request , Please try again</string>
   <string name="pref_stock_initial_request" translatable="false">init_request</string>
-  <string name="action_change_percentage">Change in percentage</string>
-  <string name="add_new_stock">Add new stock in list</string>
+  <string name="action_change_percentage" translatable="false">Change in percentage</string>
+  <string name="add_new_stock" translatable="false">Add new stock in list</string>
 </resources>
